everything good on the front end except validations need to be better.....now to reddit clone part 2

--- a/htmlTemplates/everything.html
+++ b/htmlTemplates/everything.html
@@ -114,7 +114,7 @@
   <div class="col-md-12">
     <div class="well">
       <div class="row">
-      <div class="col-md-2 col-xs-2">
+      <div class="col-md-2 col-sm-2 col-xs-2">
         <img ng-src="{{postObj.image}}">
         </div>
         <div class="media-body">
@@ -138,10 +138,15 @@
             {{postObj.body}}
           </p>
           <div>
-            Posted On:{{postObj.time}}
+            Posted On: {{postObj.time}}
             |
             <a ng-click="$ctrl.toggleComments(postObj)">
-            <i class="glyphicon glyphicon-comment"></i>       Some comments
+            <i class="glyphicon  glyphicon-comment"></i>
+            <ng-pluralize count="postObj.comments.length"
+            when="{'0': 'be the first      person to comment!',
+            '1': '1 comment',
+            'other': '{} comments'}">
+            </ng-pluralize>
             </a>
           </div>
           <!-- come back to validating the comment!  -->
@@ -149,7 +154,7 @@
           ng-show="postObj.commentsVis"
           ng-submit="$ctrl.createNewComment(postObj)"
           >
-            <div class="col-md-offset-1">
+            <div class="col-md-8">
               <hr>
             <div ng-repeat="commentObj in postObj.comments">
               <p>
@@ -160,7 +165,7 @@
                 <div class="form-group">
                   <input
                   id="newComment"
-                  ng-model="$ctrl.newComment"
+                  ng-model="postObj.newComment"
                   name="newComment"
                   class="form-control">
                 </div>
